app/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dirt-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dirt-api
  template:
    metadata:
      labels:
        app: dirt-api
    spec:
      containers:
        - name: dirt-api
          image: ghcr.io/fehho/dirt-api:latest@sha256:d1d5d6eeeb230a25a338aaade5ff8725cf73778a595df9dc40b9fd1a80557f3e
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "1Gi"
              cpu: "500m"
---

## ClusterIP Service
#
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  type: ClusterIP
  selector:
    app: dirt-api
  ports:
    - port: 3000
      targetPort: 3000
