app/app.yml
## Application Deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dirt-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dirt-app
  template:
    metadata:
      labels:
        app: dirt-app
    spec:
      containers:
        - name: dirt-app
          image: ghcr.io/fehho/dirt-app:latest@sha256:667117bb58c9966be5a0f2bcf68bab25af56a34ac7a4c0a55b216a20ebd8b8c8
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---

## ClusterIP Service
#
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  type: ClusterIP
  selector:
    app: dirt-app
  ports:
    - port: 3000
      targetPort: 3000
