app/db.yml
## Application Deployment
#
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dirt-db
spec:
  selector:
    matchLabels:
      app: dirt-db
  serviceName: dirt-db
  replicas: 1
  template:
    metadata:
      labels:
        app: dirt-db
    spec:
      volumes:
        - name: dirt-db-files
          configMap:
            name: dirt-db-files
      containers:
        - name: dirt-db
          image: dirt-db:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 1433
              name: dirt-db
          volumeMounts:
            - name: db-data
              mountPath: /var/opt/mssql/data
            - name: dirt-db-files
              mountPath: /var/opt/mssql/schema
  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
---
## ClusterIP Service
#
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  type: ClusterIP
  selector:
    app: dirt-db
  ports:
    - port: 1433
      targetPort: 1433
